--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/leowebdev20/soldo-budget-app/src/index.html">
+<meta http-equiv="refresh" content="0; url=https://leowebdev20.github.io/soldo-budget-app/src/index.html">
